tests/negative/resource_local_place_value.ora
resource TokenUnit = u256;

contract LocalPlaceValue {
    storage var balances: map<address, Resource<TokenUnit>>;

    pub fn bad(owner: address) {
        let place: Resource<TokenUnit> = balances[owner];
    }
}
